--- a/README.adoc
+++ b/README.adoc
@@ -7,4 +7,6 @@
 * Install app from file
 * Select downloaded .tar.gz file
 
+Alternately, clone this repo directly into $SPLUNK_HOME/etc/apps and restart splunk
+
 Don't forget to add a data input.  Use source type "jaf"
